# c19terms

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
npm/: README.md
npm/src/: index.js
pip/: README.md  setup.py
pip/covid_19_terms/: __init__.py
scripts/: build.py
sections/: findings.json  procedures.json  situations.json  withdrawn.json
sections/products/: az-ab.json  az.json  cansino.json  covaxin-multidose-vials.json  covaxin-vials.json  covishield-singles.json  covishield.json  covovax.json  janssen.json  medicago.json  moderna-1273-singles.json  moderna-1273.214.json  moderna-1273.json  moderna-spikevax-overseas.json  moderna-spikevax-xbb1.5.json  moderna-spikevax.json  moderna.json  novavax.json  pfizer-10mcg-2ml.json  pfizer-15mcg-multidose.json  pfizer-30mcg-3ml.json  pfizer-30mcg-ready-to-use.json  pfizer-3mcg-2ml.json  pfizer-comirnaty-xbb1.5-children-0-4.json  pfizer-comirnaty-xbb1.5-children-5-11.json  pfizer-omnicron-ba1-15mcg.json  pfizer-omnicron-ba1.5-30mcg.json  pfizer.json  sanofi-d614.json  sanofi-emulsion.json  sanofi.json  sinopharm-syringe.json  sinopharm-vials.json  sinovac.json  sputnik-v-i-mulidose-vials.json  sputnik-v-i-vials.json  sputnik-v-ii-multidose-vials.json  sputnik-v-ii-vials.json  valneva.json  vtm
